--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
     --rich-black: #02040fff;
 } */
 body{
+    max-width: 100%;
     background-color: var(--timberwolf);
 }
 
@@ -19,6 +20,12 @@ header {
     background-color: var(--timberwolf);
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+}
+
+header::after {
+    height: 100px;
+    background-color: aqua;
 }
 
 #logo img{
@@ -68,8 +75,40 @@ nav ul li:hover {
 main {
     background-color: var(--claret);
     width: 90%;
+    min-height: 100%;
     margin-left: 5%;
 }
+
+main .container_image {
+    display: flex;
+    width: 100%;
+    height: 60%;
+    background-color: brown;
+}
+
+main .container_image img {
+    width: 100%;
+    max-height: 30%
+}
+
+.middle_text {
+    width: 100%;
+    height: 14rem;
+    display: flex;
+    background-color: aqua;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+#projects_header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: aliceblue;
+}
+
+
 
 
 
@@ -77,9 +116,16 @@ main {
 
 footer {
     height: 100px;
-    width: 100%;
+    width: 90%;
+    margin-left: 5%;
     display: flex;
     background-color: var(--prussian-blue);
     align-items: center;
     justify-content: space-around;
+}
+.footer_logo img{
+    width: 30px;
+    height: 30px;
+    background-color: var(--rich-black);
+    border-radius: 50%;
 }
