--- a/assets/style.css
+++ b/assets/style.css
@@ -21,12 +21,9 @@ header {
     align-items: center;
     justify-content: space-around;
     position: fixed;
+
 }
 
-header::after {
-    height: 100px;
-    background-color: aqua;
-}
 
 #logo img{
     width: 80px;
@@ -53,6 +50,8 @@ nav ul li {
     border-radius: 8px;
     font-weight: 700;
     color: var(--rich-black);
+    transition-duration: 0.4s;
+
 }
 
 nav ul li:hover {
@@ -60,6 +59,8 @@ nav ul li:hover {
     color: var(--gamboge);
     font-weight: 700;
     padding: 10px;
+    border: 2px solid var(--gamboge);
+
 }
 
 .hamburger_menu{
@@ -73,7 +74,6 @@ nav ul li:hover {
 
 
 main {
-    background-color: var(--claret);
     width: 90%;
     min-height: 100%;
     margin-left: 5%;
@@ -83,7 +83,6 @@ main .container_image {
     display: flex;
     width: 100%;
     height: 60%;
-    background-color: brown;
 }
 
 main .container_image img {
@@ -95,7 +94,6 @@ main .container_image img {
     width: 100%;
     height: 14rem;
     display: flex;
-    background-color: aqua;
     align-items: center;
     justify-content: space-around;
     padding: 20px;
@@ -105,8 +103,85 @@ main .container_image img {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: aliceblue;
+    margin: 20px 0px;
+    font-size: 2rem;
+    color: var(--gamboge);
 }
+
+main .container_projects {
+    display: inline-flex;
+    flex-direction: row;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    background-color: var(--prussian-blue);
+}
+
+main .articles {
+    display: flex;
+}
+
+.weeks {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 50px;
+}
+
+.week{
+    width: 40%;
+    height: 25vh;
+    /* display: flex; */
+    border: 1px solid var(--gamboge);
+    margin: 20px 0px;
+    color: var(--timberwolf);
+    border-radius: 8px;
+}
+
+
+#img_wk2 img{
+    width: 100%;
+    height: 12em;
+    border-radius: 8px;
+}
+.project_boxes h3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--gamboge);
+    font-size: 1.5rem;
+}
+
+.project_boxes p {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.project_boxes a {
+    display: inline-block;
+    justify-content: right;
+    font-family: "Roboto";
+    font-weight: 700;
+    text-decoration: none;
+    color: var(--gamboge);
+    font-size: 1.2rem;
+    margin-left: 30px; 
+    background-color: var(--prussian-blue);
+    border-radius: 6px;
+    padding: 8px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    border: 2px solid var(--gamboge);
+}
+
+.project_boxes a:hover {
+    background-color: var(--gamboge);
+    color: var(--prussian-blue);
+    font-weight: 700;
+    padding: 8px;
+    box-shadow: 4px 2px var(--rich-black);
+    
+}
+
 
 
 /* FOOTER */
@@ -116,7 +191,7 @@ footer {
     width: 90%;
     margin-left: 5%;
     display: flex;
-    background-color: var(--prussian-blue);
+    background-color: var(--timberwolf);
     align-items: center;
     justify-content: space-around;
 }
