--- a/assets/style.css
+++ b/assets/style.css
@@ -102,16 +102,16 @@ main .container_image img {
 
 #projects_header {
     display: flex;
+    width: 100%;
     align-items: center;
     justify-content: center;
-    margin: 20px 0px;
+    margin-bottom: 100px;
     font-size: 2rem;
     color: var(--gamboge);
 }
 
 main .container_projects {
-    display: inline-flex;
-    flex-direction: row;
+    max-width: 100%;
     margin-top: 50px;
     margin-bottom: 20px;
     background-color: var(--prussian-blue);
@@ -119,21 +119,22 @@ main .container_projects {
 
 main .articles {
     display: flex;
+    width: 100%;
 }
 
 .weeks {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 50px;
+    justify-content: center;
+    gap: 100px;
+    padding: 80px;
 }
 
 .week{
-    width: 40%;
-    height: 25vh;
-    /* display: flex; */
+    max-width: 40%;
+    height: 35vh;
     border: 1px solid var(--gamboge);
-    margin: 20px 0px;
+    margin: 20px 60px;
     color: var(--timberwolf);
     border-radius: 8px;
 }
@@ -202,3 +203,90 @@ footer {
     background-color: var(--rich-black);
     border-radius: 50%;
 }
+
+@media screen and (min-width: 1901px) {
+
+    main .container_projects {
+        min-width: 100%;
+        margin-top: 50px;
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: space-around;
+
+    }
+    
+    main .articles {
+        display: flex;
+        width: 100%;
+    }
+
+    #img_wk1 img{
+        width: 100%;
+        height: 400px;
+        border-radius: 8px;
+    }
+
+    #img_wk2 img{
+        width: 100%;
+        height: 400px;
+        border-radius: 8px;
+    }
+
+
+    .week{
+        min-width: 65em;
+        height: 35em;
+        border: 1px solid var(--gamboge);
+        margin: 20px 60px;
+        color: var(--timberwolf);
+        border-radius: 8px;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .project_boxes h3 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--gamboge);
+        font-size: 1.5rem;
+        margin-top: 1em;
+    }
+    
+    .project_boxes p {
+        font-size: 1.2rem;
+        text-align: center;
+    }
+    
+    .project_boxes a {
+        display: flex;
+        width: 12em;
+        align-items: center;
+        justify-content: center;
+        font-family: "Roboto";
+        font-weight: 700;
+        text-decoration: none;
+        color: var(--gamboge);
+        font-size: 1.2rem;
+        background-color: var(--prussian-blue);
+        border-radius: 6px;
+        padding: 8px;
+        cursor: pointer;
+        transition-duration: 0.4s;
+        border: 2px solid var(--gamboge);
+        margin-top: 1em;
+    }
+    
+    .project_boxes a:hover {
+        background-color: var(--gamboge);
+        color: var(--prussian-blue);
+        font-weight: 700;
+        padding: 8px;
+        box-shadow: 4px 2px var(--rich-black);
+        
+    }
+
+}
+
+    
